Update close button link in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ transition:0.3s;
 
 <div class="container">
 <!-- دکمه بستن گوشه راست بالا -->
-<button class="close-btn" onclick="window.location.href='https://mo93ch-dev.github.io/Aryapardakht'">×</button>
+<button class="close-btn" onclick="window.location.href='https://mo93ch-dev.github.io/Aryapardakhttel'">×</button>
 
 <h2>ثبت درخواست حواله</h2>
 
